--- a/naturet/views/users/index.hbs
+++ b/naturet/views/users/index.hbs
@@ -1,9 +1,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+<div class="container-slider mx-auto pt-5 pb-5">
 
-<input type='text' name='' id="filter-word" >
+<input type='text' name='' id="filter-word" class="w-100" rows='3'>
 <button id="filter-button">filtrar</button>
+</div>
 
 <div class="container-slider mx-auto">
+  
   <h2>ULtimas Experiencias</h2>
   <hr>
   <section class="customer-experiencer slider">
