--- a/naturet/public/stylesheets/style.css
+++ b/naturet/public/stylesheets/style.css
@@ -2,6 +2,65 @@
   opacity: 0.5;
 }
 
+#filter-word{
+  height: 40px;
+  font-size: 18px;
+}
+
+.image-category{
+  height: 100%;
+  width: 80px;
+  border-radius: 4px 0px 0px 4px;
+  background-size: cover !important;
+  background-position: center !important;
+}
+
+.category-tag{
+  cursor: pointer;
+  transition: 0.3;
+}
+.category-tag:hover{
+  color: green;
+}
+.category-name-text{
+  margin-left: 12px;
+  font-size: 18px;
+}
+
+.row-categories{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.category-name-home{
+  width: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: left;
+  align-items: center;
+  height: 80px;
+}
+
+.image-filter{
+  max-width: 100%;
+  height: 250px;
+  background-size: cover;
+  background-position: center;
+}
+
+.categorie-box{
+  cursor: pointer;
+  border-radius: 4px;
+  min-height: 60px;
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  border: 1px solid rgba(0,0,0,0.15);
+  box-shadow: 0 0 3px #ddd;
+  min-height: 80px;
+  margin-bottom: 15px;
+}
 
 /* Possible colors :  /*#00aad2*/
 .slider-session{
@@ -514,6 +573,11 @@ input[type=file] {
 }
 
 @media (max-width: 492px){
+  .row-categories{
+    display: flex;
+    justify-content: center;
+  
+  }
   .slick-slide {
 
     margin: 0px 0px;
