--- a/naturet/views/layout.hbs
+++ b/naturet/views/layout.hbs
@@ -33,6 +33,8 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
+<script src="/js/filters.js">
+
   <script src="/js/axios.js" type="text/javascript"></script>
   <script src="/js/constants.js" type="text/javascript"></script>
   <script src="/js/index.js" type="text/javascript"></script>
