--- a/naturet/views/users/results.hbs
+++ b/naturet/views/users/results.hbs
@@ -4,7 +4,7 @@
 <div class="row">
     {{#each_upto experiences 9 }}
 
-    <div class="col-4 mb-3 ">
+    <div class="col-lg-4 col-md-6 col-12 mb-3 mt-5 ">
       <a href="/experiences/{{this.id}}">
       <div class="border rounded-top">
 
