--- a/naturet/views/experiences/detail.hbs
+++ b/naturet/views/experiences/detail.hbs
@@ -114,7 +114,7 @@
 
 
         {{#ispurchased experience session}}
-        <form action="/experiences/{{experience.id}}/docomment" class="mt-1" method="post">
+        <form action="/experiences/{{../experience.id}}/docomment" class="mt-1" method="post">
           <div class="form-actions">
             <h2 for="docomment">Escribe tu comentario</h2>
             <textarea class="form-control mb-4" name="message" rows=2></textarea>
@@ -159,3 +159,4 @@
   var jsonObj = JSON.parse(decodedJson);
   window.points = jsonObj;
 </script>
+<script src="/js/axios.js" type="text/javascript"></script>
