--- a/naturet/public/stylesheets/style.css
+++ b/naturet/public/stylesheets/style.css
@@ -1,6 +1,9 @@
-.favorite{
-  opacity: 0.5;
+
+
+#fav-btn i {
+  pointer-events: none;
 }
+  
 
 #filter-word{
   height: 40px;
@@ -593,7 +596,7 @@ input[type=file] {
 }
 
 /* rating */
-
+/* 
 *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -701,7 +704,7 @@ input[type=file] {
     display:inline-block;
     color:#888;
   }
-  
+   */
   
   
   /* Rating Star Widgets Style */
@@ -716,20 +719,22 @@ input[type=file] {
     display:inline-block;
     
   }
+
+
   
   /* Idle State of the stars */
-  .rating-stars ul > li.star > i.fa {
-    font-size:2.5em; /* Change the size of the stars */
-    color:#ccc; /* Color on idle state */
-  }
+  /* .rating-stars ul > li.star > i.fa {
+    font-size:2.5em; 
+    color:#ccc; 
+  } 
   
-  /* Hover state of the stars */
+  
   .rating-stars ul > li.star.hover > i.fa {
     color:#FFCC36;
   }
   
-  /* Selected state of the stars */
+  
   .rating-stars ul > li.star.selected > i.fa {
     color:#FF912C;
-  }
+  } /*
   
