--- a/naturet/views/experiences/detail.hbs
+++ b/naturet/views/experiences/detail.hbs
@@ -9,26 +9,26 @@
         <a href="/profile">profile</a>
      
 
-        {{!-- {{#theCreator experience session}}
+        {{#theCreator experience session}}
         <h6>creator</h6>
-        {{else}} --}}
-        <button class="btn btn-success fav-btn  {{#isfollow experience session}}{{else}}unfollow{{/isfollow}}" type="button"
-          value="{{experience.id}}" id="fav-btn">
-          {{#isfollow experience session}}
-          <i class="fas fa-star"></i>
+        {{else}}
+        <button class="btn btn-success fav-btn  {{#isfollow ../experience ../session}}{{else}}unfollow{{/isfollow}}" type="button"
+          value="{{../experience.id}}" id="fav-btn">
+          {{#isfollow ../experience ../session}}
+          <i class="fav-btn fas fa-star "></i>
           {{else}}
-          <i class="far fa-star"></i>
+          <i class="fav-btn far fa-star "></i>
           {{/isfollow}}
         </button>
 
-        <form action="/experiences/{{experience.id}}/purchased" class="mt-1" method="post">
+        <form action="/experiences/{{../experience.id}}/purchased" class="mt-1" method="post">
           <div class="form-actions">
             <button class="btn btn-danger" type="submit">
               purchased
             </button>
           </div>
         </form>
-        {{!-- {{/theCreator}} --}}
+        {{/theCreator}}
       </div>
     </div>
 
@@ -191,7 +191,7 @@
               {{#formatDate this.createdAt}}
               {{/formatDate}}
             </span>
-            <span class="ml-3 p-0 mb-0"><i class='fa fa-star fa-fw'></i>{{this.rate}}/5 </span>
+            <span class="ml-3 p-0 mb-0"><i class='fa fa-star fa-fw'></i></span>
         </div>
         <div class="flex-row">
           <h5>{{this.message}}</h5>
