feat: payment data ok

--- a/naturet/views/experiences/detail.hbs
+++ b/naturet/views/experiences/detail.hbs
@@ -26,9 +26,9 @@
               src="https://checkout.stripe.com/checkout.js" 
               class="stripe-button" 
               data-key="pk_test_zcTEmEh9DNzx17DvNLibaUVS"
-              data-name="Demo Site" 
-              data-description="2 widgets ($20.00)" 
-              data-amount="2000">
+              data-name="{{../experience.name}}" 
+              data-description="Total a pagar: {{../experience.price}} €" 
+              data-amount="{{../experience.price}}00 €">
               </script>
           </form>
 
