feat: home style almonst done

--- a/naturet/views/users/index.hbs
+++ b/naturet/views/users/index.hbs
@@ -1,28 +1,50 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-<div class="container-slider mx-auto pt-5 pb-5">
+<header class="masthead">
+  <div class="container-slider mx-auto h-100">
+    <div class="row h-100 align-items-center">
+      <div class="col-12 text-left header-caption">
+        <h1 class="mobile-none">La naturaleza no es para visitar,</h1>
+        <h1 class="mobile-none"> es el verdadero hogar</h1>
+        <h1 class="just-mobile">La naturaleza no es para visitar, es el verdadero hogar</h1>
+        <hr class="small-green-hr">
+        <p class="lead ml-0">Los mejores caminos, paso a paso...</p>
+      </div>
+    </div>
+  </div>
+</header>
 
-  <input type='text' name='' id="filter-word" class="w-100">
-  <button id="filter-button" class="btn btn-primary mt-2 w-25">filtrar</button>
+<div class="container-slider mx-auto mt-5">
+  <h2 id="looking-for-name">¿What are you looking for {{#formatName session.name}}{{/formatName}}?</h2>
+  <p>Find your experiences searching in all our categories</p>
+  <section class="costumer-categories slider mb-5">
+    {{#each_upto allCategories 15 }}
+      <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 categorie-box row mb-2">
+        <div class="category-name-home" data-category="{{this.name}}">
+          <div class="image-category">
+            <span class='icon-{{this.fontnum}} search-category-icon'></span>
+          </div>
+          <h6 class="category-name-text">{{this.name}}</h6>
+        </div>
+      </div>
+    {{/each_upto}}
+  </section>
 </div>
 
 <div class="container-slider mx-auto">
-
-  <h2>ULtimas Experiencias</h2>
+  <h2>Últimas Experiencias</h2>
+  <p>Find what you want in the last experiences we upload</p>
   <hr>
   <section class="customer-experiencer slider">
     {{#each_upto experiences 15 }}
-
     <div class="slide slide1">
       <a href="/experiences/{{this.id}}">
-        <div class="image-slide-inside">
+        <div class="image-slide-inside"style="background: url('{{#if this.photos.[0]}}{{this.photos.[0]}}{{else}}https://res.cloudinary.com/dwta0wgpp/image/upload/v1550007271/test/default-preview.jpg{{/if}}')">
         </div>
       </a>
       <div class="p-2">
-
         <h5>{{this.name}}</h5>
-        <p class="experience-card-description">{{this.description}}</p>
-        <p><strong>{{this.price}}</strong></p>
-         <small class="category-tag" data-category="{{this.categories.[0]}}">#{{this.categories.[0]}}</small>
+        <p class="experience-card-description ml-0">{{this.description}}</p>
+        <p class="ml-0"><strong>{{this.price}}</strong></p>
+        <small class="category-tag" data-category="{{this.categories.[0]}}">#{{this.categories.[0]}}</small>
         <small class="category-tag" data-category="{{this.categories.[2]}}">#{{this.categories.[2]}}</small>
         <small class="category-tag" data-category="{{this.categories.[3]}}">#{{this.categories.[3]}}</small>
         <div>{{this.user.name}}</div>
@@ -68,112 +90,3 @@
   </section>
 </div>
 
-
-<div class="container-slider mx-auto mt-4 ">
-  <h2>Categorias</h2>
-  <hr>
-  <section class="mb-5">
-    <div class="flex-row wrap m-0 row-categories">
-      <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 categorie-box row mb-2">
-        <div class="category-name-home" data-category="forest">
-             <div class="image-category" style="background: url('http://www.dsalud.com/wp-content/uploads/2016/08/ntermedia_053_10.jpg')"></div>
-          <h6 class="category-name-text">Forest</h6>
-        </div>
-      </div>
-        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 categorie-box row mb-2">
-        <div class="category-name-home" data-category="wildlife">
-             <div class="image-category" style="background: url('https://estaticos.muyinteresante.es/media/cache/760x570_thumb/uploads/images/article/590c38d75bafe8cb903c9869/tucan_0.jpg')"></div>
-          <h6 class="category-name-text">Wildlife</h6>
-        </div>
-      </div>
-      
-        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 categorie-box row mb-2">
-        <div class="category-name-home" data-category="landscape">
-             <div class="image-category" style="background: url('https://cdn.pixabay.com/photo/2017/07/26/12/24/camera-2541541_960_720.jpg')"></div>
-          <h6 class="category-name-text">Al aire libre</h6>
-        </div>
-      </div>
-      
-        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 categorie-box row mb-2">
-        <div class="category-name-home" data-category="diving">
-             <div class="image-category" style="background: url('https://arenaldiving.com/wp-content/uploads/2018/02/Bautismo-Buceo-PADI-Discover-Scuba-Diving-ibiza.jpg')"></div>
-          <h6 class="category-name-text">Diving</h6>
-        </div>
-      </div>
-      
-      
-
-    </div>
-  </section>
-</div>
-
-
-<!-- DEMO STYLES and NOTES BELOW -->
-
-
-<script>
-  $(document).ready(function () {
-    $('.customer-experiencer').slick({
-      slidesToShow: 4,
-      slidesToScroll: 1,
-      arrows: true,
-      dots: false,
-      infinite: false,
-      pauseOnHover: false,
-      responsive: [{
-        breakpoint: 768,
-        settings: {
-          arrows: false,
-          slidesToShow: 2
-        }
-      }, {
-        breakpoint: 520,
-        settings: {
-          arrows: false,
-          slidesToShow: 1
-        }
-      }, {
-        breakpoint: 1068,
-        settings: {
-          arrows: false,
-          slidesToShow: 3
-        }
-      }]
-    });
-  });
-  $(document).ready(function () {
-    $('.customer-experiencer-session').slick({
-      swipe: false,
-      slidesToShow: 4,
-      slidesToScroll: 1,
-      arrows: false,
-      dots: false,
-      infinite: false,
-      pauseOnHover: false,
-      responsive: [{
-        breakpoint: 768,
-        settings: {
-          arrows: false,
-          slidesToShow: 2
-        }
-      }, {
-        breakpoint: 520,
-        settings: {
-          swipe: true,
-          arrows: false,
-          slidesToShow: 1
-        }
-      }, {
-        breakpoint: 1068,
-        settings: {
-          arrows: false,
-          slidesToShow: 3
-        }
-      }]
-    });
-  });
-
-</script>
-
-
-</script>
