--- a/naturet/views/layout.hbs
+++ b/naturet/views/layout.hbs
@@ -6,13 +6,13 @@
   <script src="/js/jquery.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick-theme.css" />
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' href='/stylesheets/fonts.css' />
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <meta name="google-signin-client_id" content="328598068379-7kdcok4tf4ng868nct6judoqkqt5l009.apps.googleusercontent.com">
@@ -20,10 +20,12 @@
 </head>
 
 <body>
+  {{#if session}}
+  {{> nav }}
+  {{/if}}
+  {{{ body }}}
 
-  {{> nav }} {{{ body }}}
-
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
@@ -33,10 +35,10 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
-<script src="/js/filters.js">
+  <script src="/js/filters.js">
 
-  <script src="/js/axios.js" type="text/javascript"></script>
-  <script src="/js/constants.js" type="text/javascript"></script>
+    <script src="/js/axios.js" type="text/javascript"></script>
+  <script src="/js/slides.js" type="text/javascript"></script>
   <script src="/js/index.js" type="text/javascript"></script>
   <script src="/js/constants.map.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
