--- a/naturet/views/partials/nav.hbs
+++ b/naturet/views/partials/nav.hbs
@@ -1,12 +1,41 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<ul class="navbar-nav mr-auto">
-		
+<nav class="navbar navbar-expand-lg navbar-light ">
+
+	<a class="navbar-brand" href="/">
+		<img src="../img/logo-verde.svg" width="50" height="50" class="d-inline-block align-top" alt="">
+		<span id="nav-logo-name">Natur<span id="nav-logo-name-app">app</span></span>
+	</a>
+
+	<div class="d-flex input-search-navbar mobile-none-nav">
+		<input type='text' name='' id="filter-word" class="w-100" placeholder="Busca experiencias">
+		<button id="filter-button" class="btn btn-primary mt-2 w-25">Search</button>
+	</div>
+
+	<ul class="navbar-nav ml-auto">
 		{{#if session}}
-			<li class="nav-item">
-				<a class="nav-link" href="/sessions/delete">Logout</a>
-			</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/sessions/delete">Logout</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/">Home</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/profile/edit">Edit Profile</a>
+		</li>
+		{{#if session.creator}}
+		<li class="nav-item">
+			<a class="nav-link" href="/experiences/create">Create</a>
+		</li>
+		{{else}}
+		<li class="nav-item">
+			<a class="nav-link" href="/creator/create">Become a Creator</a>
+		</li>
 		{{/if}}
-	
+		<li class="nav-item">
+			<a class="nav-link" href="/profile">
+				<div class="image-slide-owner-nav" style="background:url('{{session.photo}}')"></div>
+			</a>
+		</li>
+		{{/if}}
 	</ul>
-	
+
 </nav>
